# grapho

./: .gitignore  Makefile
core/: grapho-core.cabal
core/src/Grapho/: API.hs
ffi/: grapho_api.h  grapho_runtime.c
frontend-linux/: Makefile
frontend-linux/src/: gtk_app.c  gtk_app.h  haskell_bridge.c  main.c  vulkan_renderer.c  vulkan_renderer.h
frontend-macos/: Info.plist  Package.swift
frontend-macos/Sources/Grapho/: App.swift  ContentView.swift  GraphoBridge.swift  MetalView.swift
frontend-macos/Sources/GraphoMac/: App.swift  GraphoBridge.swift
scripts/: bundle-macos.sh
