cabal-version:      3.0
name:               grapho-core
version:            0.1.0.0
build-type:         Simple
license:            MIT

foreign-library grapho-core
  type:                native-shared
  if os(darwin)
    options: standalone
  other-modules:       Grapho.API
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.14 && < 5
  ghc-options:         -Wall
